동적으로 생성된 파일을 지정된 경로에 업로드하고 JSON에 기록 필요 : fix : smb 정보 수정 https://github.com/TEAM-ROMROM/RomRom-FE/issues/56

--- a/.github/workflows/ROMROM-ANDROID-FILE-AUTO-UPOAD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-FILE-AUTO-UPOAD.yaml
@@ -148,10 +148,9 @@ jobs:
           SMB_USERNAME: ${{ secrets.WEB_SMB_USERNAME }}
           SMB_PASSWORD: ${{ secrets.WEB_SMB_PASSWORD }}
         run: |
-          # 하드코딩된 SMB 정보 사용
-          SMB_SERVER="suh-project.iptime.org"
-          SMB_PORT="445"
-          SMB_SHARE="romrom"
+          SMB_SERVER=${{ secrets.WEB_SMB_SERVER }}
+          SMB_PORT=${{ secrets.WEB_SMB_PORT }}
+          SMB_SHARE=${{ secrets.WEB_SMB_SHARE_ROOT_DIR }}
           SMB_BASE_PATH="volume1/projects/romrom/github_secret/front"
           
           echo "SMB 서버에 연결 중..."
