--- a/.github/workflows/ROMROM-ANDROID-FILE-AUTO-UPOAD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-FILE-AUTO-UPOAD.yaml
@@ -15,12 +15,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
-      - name: 필요 패키지 설치
-        run: |
-          sudo apt-get install -y smbclient jq
-          echo "SMB와 jq 설치 완료"
-
+          
       # 타임스탬프 폴더 생성
       - name: 타임스탬프 폴더명 생성
         run: |
@@ -149,8 +144,8 @@ jobs:
         run: |
           SMB_SERVER=${{ secrets.WEB_SMB_SERVER }}
           SMB_PORT=${{ secrets.WEB_SMB_PORT }}
-          SMB_SHARE=${{ secrets.WEB_SMB_SHARE_ROOT_DIR }}
-          SMB_BASE_PATH="volume1/projects/romrom/github_secret/front"
+          SMB_SHARE="projects"
+          SMB_BASE_PATH="/romrom/github_secret/front"
           
           echo "SMB 서버에 연결 중..."
           
