동적으로 생성된 파일을 지정된 경로에 업로드하고 JSON에 기록 필요 : feat : 폴더이름 구조변경 2025-05-12_14-56-24 형태로 변경 https://github.com/TEAM-ROMROM/RomRom-FE/issues/56

--- a/.github/workflows/ROMROM-ANDROID-FILE-AUTO-UPOAD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-FILE-AUTO-UPOAD.yaml
@@ -24,8 +24,10 @@ jobs:
       # 타임스탬프 폴더 생성
       - name: 타임스탬프 폴더명 생성
         run: |
+          # Asia/Seoul 로컬타임 사용
           export TZ='Asia/Seoul'
-          TIMESTAMP=$(date '+%Y%m%d%H%M%S')
+          # YYYY-MM-DD_HH-MM-SS 형식
+          TIMESTAMP=$(date '+%Y-%m-%d_%H-%M-%S')
           echo "TIMESTAMP=$TIMESTAMP" >> $GITHUB_ENV
           echo "생성된 타임스탬프: $TIMESTAMP"
 
